# Linux-Administration-Systems-Programming

./: README.md
Project_required_files/Module/caesar_ciphe/: CMakeLists.txt  caesar_cipher.mk
Project_required_files/Module/xor_cipher/: CMakeLists.txt  xor_cipher.mk
Project_required_files/application/: CMakeLists.txt  Makefile
linux_project/: bash.sh  sshfile.c  textfile1  textfile2  userdef.sh
